Initial import of pages

--- a/PortaPayments-Server/war/universal.html
+++ b/PortaPayments-Server/war/universal.html
@@ -7,12 +7,7 @@
 <script type="text/javascript">
 function generateCode() {
  document.all.codeimage.src = 'CreateUniversalCode?c='+document.forms[0].c.value+
-								'&a0='+document.forms[0].a0.value+'&r0='+document.forms[0].r0.value+
-								'&a1='+document.forms[0].a1.value+'&r1='+document.forms[0].r1.value+
-								'&a2='+document.forms[0].a2.value+'&r2='+document.forms[0].r2.value+
-								'&a3='+document.forms[0].a3.value+'&r3='+document.forms[0].r3.value+
-								'&a4='+document.forms[0].a4.value+'&r4='+document.forms[0].r4.value+
-								'&a5='+document.forms[0].a5.value+'&r5='+document.forms[0].r5.value;
+								'&a0='+document.forms[0].a0.value+'&r0='+document.forms[0].r0.value;
 }
 
 function clear(id)
@@ -41,9 +36,9 @@ function clear(id)
 <div class="col1wrap">
 <div class="col1">
 <h3>What is this?</h3>
-<p>PortaPayments is a free "Scan & Pay" solution which allows customers to purchase your goods by scanning a 3D bar code with their 'phone.
+<p>PortaPayments is a free "Scan &amp; Pay" solution which allows customers to purchase your goods by scanning a 3D bar code with their 'phone.</p>
 
-<p>You can generate PortaPayments codes using the code generator on the right or the on-phone application and include them in Advertising material, Invoices, or even put them in the window of a traditional bricks and mortar store so people can buy your goods even when your store is closed.
+<p>You can generate PortaPayments codes using the code generator on the right or the on-phone application and include them in Advertising material, Invoices, or even put them in the window of a traditional bricks and mortar store so people can buy your goods even when your store is closed.</p>
 
 <p>You can see a demonstration of PortaPayments in action in the video below, and if you'd like to help support the development of PortaPayments please vote for it in the PayPalX Developers Challenge by following the voting instructions at <a href="http://bit.ly/9ajgbu" target="_blank">http://bit.ly/9ajgbu</a>.
 If you'd like some more information please see <a href="faq.html">the frequently asked questions page</a>.</p>
@@ -91,46 +86,6 @@ If you'd like some more information please see <a href="faq.html">the frequently
 			<td><input type="text" name="r0" value="me@my.com" size="15"/>, <input type="text" name="a0" value="1.23" align="right" size="4"></td>
 			<td>
 				<a href="javascript:clear(0)" id="clear_0" style="text-decoration:none">x</a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="text" name="r1" size="15"/>, <input type="text" name="a1" align="right" size="4">
-			</td>
-			<td>
-				<a href="javascript:clear(1)" id="clear_1" style="text-decoration:none">x</a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="text" name="r2" size="15"/>, <input type="text" name="a2" align="right" size="4">
-			</td>
-			<td>
-				<a href="javascript:clear(2)" id="clear_2" style="text-decoration:none">x</a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="text" name="r3" size="15"/>, <input type="text" name="a3" align="right" size="4">
-			</td>
-			<td>
-				<a href="javascript:clear(3)" id="clear_3" style="text-decoration:none">x</a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="text" name="r4" size="15"/>, <input type="text" name="a4" align="right" size="4">
-			</td>
-			<td>
-				<a href="javascript:clear(4)" id="clear_4" style="text-decoration:none">x</a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="text" name="r5" size="15"/>, <input type="text" name="a5" align="right" size="4">
-			</td>
-			<td>
-				<a href="javascript:clear(5)" id="clear_5" style="text-decoration:none">x</a>
 			</td>
 		</tr>
 		</table>
