Added clarification of AUP & fees.

--- a/PortaPayments-Server/war/universal.html
+++ b/PortaPayments-Server/war/universal.html
@@ -37,8 +37,6 @@ function clear(id)
       <div class="roundedcornr_content_456447">
       	<center>
 	      	<h3>Universal Code Generator</h3>
-	      	<p><b>Please note :</b> There is a 0.25% fee charged each time a payment is made via a universal code,
-	      	with the minimum being 2 minor units of currency (e.g. 2 cents).</p>
 			<form onSubmit="generateCode(); return true;" name="genform">
 				<table>
 					<tr>
@@ -69,6 +67,10 @@ function clear(id)
 					</tr>								
 				</table>
 			</form>
+	      	<p><b>Please note :</b> Payments are made via PayPal and you must adhere to their acceptable use policy which is 
+	      	<a href="https://cms.paypal.com/us/cgi-bin/marketingweb?cmd=_render-content&content_ID=ua/AcceptableUse_full&locale.x=en_US" target="_blank">available here</a>.
+	      	There is a 0.25% fee charged in addition to any PayPal fees each time a payment is made via a universal code
+	      	(minimum fee: 2 minor units of currency - i.e. 2 cents, 2 pence, etc.).</p>
 	    </center>
       </div>
    <div class="roundedcornr_bottom_456447"><div></div></div>
