--- a/PortaPayments-Server/war/universal.html
+++ b/PortaPayments-Server/war/universal.html
@@ -7,8 +7,10 @@
 <script type="text/javascript">
 function generateCode() {
 	 document.all.codeimage.src = 'http://static.portapayments.com/images/loading.gif';
-	 document.all.codeimage.src = 'CreateUniversalCode?c='+document.forms[0].c.value+
-								'&a0='+document.forms[0].a0.value+'&r0='+document.forms[0].r0.value;
+	 document.all.codeimage.src = 'http://appengine.portapayments.com/CreateUniversalCode?c='+escape(document.forms[0].c.value)+
+								'&a0='+escape(document.forms[0].a0.value)+
+								'&r0='+escape(document.forms[0].r0.value)+
+								'&n='+escape(document.forms[0].n.value);
 }
 
 function clear(id)
@@ -42,7 +44,7 @@ function clear(id)
 					<tr>
 						<td align="right">Recipient :</td>
 						<td><input type="text" name="r0" value="me@my.com" size="20"/></td>
-						<td rowspan="4">
+						<td rowspan="5">
 							<img width="192" height="192" id="codeimage" src="http://static.portapayments.com/images/blankcode.png" style="border: 1px solid black"/>
 						</td>
 					</tr>
@@ -62,8 +64,12 @@ function clear(id)
 						<td align="right">Amount :</td>
 						<td><input type="text" name="a0" value="1.23" align="right" size="6"></td>
 					</tr>
+					<tr valign="top">
+						<td align="right">Note :</td>
+						<td><textarea name="n" rows="5" cols="15"></textarea></td>
+					</tr>
 					<tr>
-						<td colspan="2" align="center"><a href="javascript:generateCode()">Generate Code -&gt;</a></td>
+						<td colspan="2" align="center"><a href="#" onClick="generateCode();return true;">Generate Code -&gt;</a></td>
 					</tr>								
 				</table>
 			</form>
