Updated with valid recipient

--- a/PortaPayments-Server/war/universal.html
+++ b/PortaPayments-Server/war/universal.html
@@ -43,7 +43,7 @@ function clear(id)
 				<table>
 					<tr>
 						<td align="right">Recipient :</td>
-						<td><input type="text" name="r0" value="me@my.com" size="20"/></td>
+						<td><input type="text" name="r0" value="support@portapayments.com" size="20"/></td>
 						<td rowspan="5">
 							<img width="192" height="192" id="codeimage" src="http://static.portapayments.com/images/blankcode.png" style="border: 1px solid black"/>
 						</td>
