--- a/war/payOK.html
+++ b/war/payOK.html
@@ -29,6 +29,6 @@
 </div>
 </div>
 <div class="footer">PortaPayments is owned and operated by <a href="http://funkyandroid.com">Funky Android Ltd.</a><br/>
-This website and its' contents are (c)Copyright 2010 Funky Android Ltd., All Rights Reserved.</div>
+This website and its' contents are (c)Copyright 2010-2012 Funky Android Ltd., All Rights Reserved.</div>
 </body>
 </html>
